Closed Bug 1586793 Opened 6 years ago Closed 6 years ago

[Fission] iframe.contentWindow may be null when it shouldn't be

Categories

(Core :: DOM: Navigation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla71
Fission Milestone M4
Tracking Status
firefox71 --- fixed

People

(Reporter: smaug, Assigned: smaug)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

bug 1580391 shows that .contentWindow can be null when it shouldn't be.
The iframe element there is in DOM all the time, but at some point
.contentWindow becomes null.

Assignee: nobody → bugs
Fission Milestone: --- → M4
Priority: -- → P2

The other cases when ClearWindowProxy is called seem to be fine.
It is the Unlink case which was causing null .contentWindow with test_mozfiledataurl.html

Fixes bug 1580391 and backs out bug 1581004

Pushed by opettay@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/821fdad0dbb2 [Fission] iframe.contentWindow may be null when it shouldn't be, r=peterv
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: