Bug 1586793 - [Fission] iframe.contentWindow may be null when it shouldn't be, r=peterv

The other cases when ClearWindowProxy is called seem to be fine.
It is the Unlink case which was causing null .contentWindow with test_mozfiledataurl.html

Fixes bug 1580391 and backs out bug 1581004

Differential Revision: https://phabricator.services.mozilla.com/D48878